README: reorganize, add PermGen notes